# BizHaven

./: .gitignore  LICENSE  README.md  pyproject.toml  triad369.launchpad.json
app/: main.py
app/api/: models.py  server.py
app/core/: config.py  database.py
app/data/sample/: sample_clients.csv
app/data/templates/: contract_basic.md  invoice_template.md
app/services/: assistant.py  repository.py
app/ui/: run_with_api.py  streamlit_app.py
scripts/: load_sample_data.py
